--- a/w3flex.html
+++ b/w3flex.html
@@ -58,57 +58,61 @@
     <aside>
         <div class="sidenav">
             <h2>HTML Tutorials</h2>
-            <a target="_top" href="default.asp">HTML HOME</a>
-            <a target="_top" href="html_intro.asp">HTML Introduction</a>
-            <a target="_top" href="html_editors.asp">HTML Editors</a>
-            <a target="_top" href="html_colors.asp">HTML Basic</a>
-            <a target="_top" href="html_colors.asp">HTML Elements</a>
-            <a target="_top" href="html_colors.asp">HTML Attributes</a>
-            <a target="_top" href="html_colors.asp">HTML Paragraph</a>
-            <a target="_top" href="html_colors.asp">HTML Headings</a>
-            <a target="_top" href="html_colors.asp">HTML Tables</a>
-            <a target="_top" href="html_colors.asp">HTML Lists</a>
-            <a target="_top" href="html_colors.asp">HTML Block & inline</a>
-            <a target="_top" href="html_colors.asp">HTML CSS</a>
-            <a target="_top" href="html_colors.asp">HTML Comments</a>
-            <a target="_top" href="html_colors.asp">HTML Quotations</a>
-            <a target="_top" href="html_colors.asp">HTML Formatting</a>
-            <a target="_top" href="html_colors.asp">HTML Styles</a>
-            <a target="_top" href="html_colors.asp">HTML Images</a>
-            <a target="_top" href="html_colors.asp">HTML File Path</a>
-            <a target="_top" href="html_colors.asp">HTML Responsive</a>
-            <a target="_top" href="html_colors.asp">HTML ComputerCode</a>
-            <a target="_top" href="html_colors.asp">HTML Semantics</a>
-            <a target="_top" href="html_colors.asp">HTML Layout</a>
-            <a target="_top" href="html_colors.asp">HTML Id</a>
-            <a target="_top" href="html_colors.asp">HTML Classes</a>
-            <a target="_top" href="html_colors.asp">HTML Iframes</a>
+            <ul class="sidenav-item">
+                <li><a target="_top" href="default.asp">HTML HOME</a></li>
+                <li><a target="_top" href="html_intro.asp">HTML Introduction</a></li>
+                <li><a target="_top" href="html_editors.asp">HTML Editors</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Basic</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Elements</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Attributes</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Paragraph</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Headings</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Tables</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Lists</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Block & inline</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML CSS</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Comments</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Quotations</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Formatting</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Styles</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Images</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML File Path</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Responsive</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML ComputerCode</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Semantics</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Layout</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Id</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Classes</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Iframes</a></li>
+            </ul>
             <h2>HTML Tutorials</h2>
-            <a target="_top" href="default.asp">HTML HOME</a>
-            <a target="_top" href="html_intro.asp">HTML Introduction</a>
-            <a target="_top" href="html_editors.asp">HTML Editors</a>
-            <a target="_top" href="html_colors.asp">HTML Basic</a>
-            <a target="_top" href="html_colors.asp">HTML Elements</a>
-            <a target="_top" href="html_colors.asp">HTML Attributes</a>
-            <a target="_top" href="html_colors.asp">HTML Paragraph</a>
-            <a target="_top" href="html_colors.asp">HTML Headings</a>
-            <a target="_top" href="html_colors.asp">HTML Tables</a>
-            <a target="_top" href="html_colors.asp">HTML Lists</a>
-            <a target="_top" href="html_colors.asp">HTML Block & inline</a>
-            <a target="_top" href="html_colors.asp">HTML CSS</a>
-            <a target="_top" href="html_colors.asp">HTML Comments</a>
-            <a target="_top" href="html_colors.asp">HTML Quotations</a>
-            <a target="_top" href="html_colors.asp">HTML Formatting</a>
-            <a target="_top" href="html_colors.asp">HTML Styles</a>
-            <a target="_top" href="html_colors.asp">HTML Images</a>
-            <a target="_top" href="html_colors.asp">HTML File Path</a>
-            <a target="_top" href="html_colors.asp">HTML Responsive</a>
-            <a target="_top" href="html_colors.asp">HTML ComputerCode</a>
-            <a target="_top" href="html_colors.asp">HTML Semantics</a>
-            <a target="_top" href="html_colors.asp">HTML Layout</a>
-            <a target="_top" href="html_colors.asp">HTML Id</a>
-            <a target="_top" href="html_colors.asp">HTML Classes</a>
-            <a target="_top" href="html_colors.asp">HTML Iframes</a>
+            <ul class="sidenav-item">
+                <li><a target="_top" href="default.asp">HTML HOME</a></li>
+                <li><a target="_top" href="html_intro.asp">HTML Introduction</a></li>
+                <li><a target="_top" href="html_editors.asp">HTML Editors</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Basic</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Elements</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Attributes</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Paragraph</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Headings</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Tables</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Lists</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Block & inline</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML CSS</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Comments</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Quotations</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Formatting</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Styles</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Images</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML File Path</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Responsive</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML ComputerCode</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Semantics</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Layout</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Id</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Classes</a></li>
+                <li><a target="_top" href="html_colors.asp">HTML Iframes</a></li>
+            </ul>
         </div>
     </aside>
     <main>
@@ -148,7 +152,12 @@
                     <button>Try it Yourself</button>
                 </div>
                 <p><strong>Click on the "Try it Yourself" button to see how it works.</strong></p>
+                <div class="btngrp">
+                    <button><a href="www.gmail.com"><i class="fa fa-chevron-left"></i>Home</a></button>
+                    <button><a href="www.gmail.com">Next<i class="fa fa-chevron-right"></i></a></button>
+                </div>    
             </section>
+            
             <hr>
             <section class="buttongrp">
                 <button><a href="www.w3schools.com">Report Error</a></button>
