--- a/w3flex.html
+++ b/w3flex.html
@@ -30,92 +30,92 @@
             <button class="active"><a href="www.w3schools.com">Login</a></button>
         </div>
     </header>
-    <nav>
-        <ul class="navleft">
-            <li class="navleft-item"><a href="www.w3schools.com"><i class="fa fa-home"></i></a></li>
-            <li class="navleft-item active"><a href="www.w3schools.com">HTML</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">CSS</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">JAVASCRIPT</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">SQL</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">PYTHON</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">PHP</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">BOOTSTRAP</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">HOW TO</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">W3.CSS</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">JAVA</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">JQUERY</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">C++</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">C#</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">R</a></li>
-            <li class="navleft-item"><a href="www.w3schools.com">REACT</a></li>
-        </ul>
-        <ul class="navright">
-            <li class="navright-item"><a href="www.w3schools.com"><i class="fa fa-adjust"></i></fas></a>
-            <li class="navright-item"><a href="www.w3schools.com"><i class="fa fa-globe"></i></a></li>
-            <li class="navright-item"><a href="www.w3schools.com"><i class="fa fa-search"></i></a></li>
-        </ul>
-    </nav>
-    <aside>
-        <div class="sidenav">
-            <h2>HTML Tutorials</h2>
-            <ul class="sidenav-item">
-                <li><a target="_top" href="default.asp">HTML HOME</a></li>
-                <li><a target="_top" href="html_intro.asp">HTML Introduction</a></li>
-                <li><a target="_top" href="html_editors.asp">HTML Editors</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Basic</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Elements</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Attributes</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Paragraph</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Headings</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Tables</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Lists</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Block & inline</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML CSS</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Comments</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Quotations</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Formatting</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Styles</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Images</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML File Path</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Responsive</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML ComputerCode</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Semantics</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Layout</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Id</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Classes</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Iframes</a></li>
-            </ul>
-            <h2>HTML Tutorials</h2>
-            <ul class="sidenav-item">
-                <li><a target="_top" href="default.asp">HTML HOME</a></li>
-                <li><a target="_top" href="html_intro.asp">HTML Introduction</a></li>
-                <li><a target="_top" href="html_editors.asp">HTML Editors</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Basic</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Elements</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Attributes</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Paragraph</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Headings</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Tables</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Lists</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Block & inline</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML CSS</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Comments</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Quotations</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Formatting</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Styles</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Images</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML File Path</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Responsive</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML ComputerCode</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Semantics</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Layout</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Id</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Classes</a></li>
-                <li><a target="_top" href="html_colors.asp">HTML Iframes</a></li>
-            </ul>
-        </div>
-    </aside>
     <main>
+        <nav>
+            <ul class="navleft">
+                <li class="navleft-item"><a href="www.w3schools.com"><i class="fa fa-home"></i></a></li>
+                <li class="navleft-item active"><a href="www.w3schools.com">HTML</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">CSS</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">JAVASCRIPT</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">SQL</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">PYTHON</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">PHP</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">BOOTSTRAP</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">HOW TO</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">W3.CSS</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">JAVA</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">JQUERY</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">C++</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">C#</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">R</a></li>
+                <li class="navleft-item"><a href="www.w3schools.com">REACT</a></li>
+            </ul>
+            <ul class="navright">
+                <li class="navright-item"><a href="www.w3schools.com"><i class="fa fa-adjust"></i></fas></a>
+                <li class="navright-item"><a href="www.w3schools.com"><i class="fa fa-globe"></i></a></li>
+                <li class="navright-item"><a href="www.w3schools.com"><i class="fa fa-search"></i></a></li>
+            </ul>
+        </nav>
+        <aside>
+            <div class="sidenav">
+                <h2>HTML Tutorials</h2>
+                <ul class="sidenav-item">
+                    <li><a target="_top" href="default.asp">HTML HOME</a></li>
+                    <li><a target="_top" href="html_intro.asp">HTML Introduction</a></li>
+                    <li><a target="_top" href="html_editors.asp">HTML Editors</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Basic</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Elements</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Attributes</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Paragraph</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Headings</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Tables</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Lists</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Block & inline</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML CSS</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Comments</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Quotations</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Formatting</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Styles</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Images</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML File Path</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Responsive</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML ComputerCode</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Semantics</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Layout</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Id</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Classes</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Iframes</a></li>
+                </ul>
+                <h2>HTML Tutorials</h2>
+                <ul class="sidenav-item">
+                    <li><a target="_top" href="default.asp">HTML HOME</a></li>
+                    <li><a target="_top" href="html_intro.asp">HTML Introduction</a></li>
+                    <li><a target="_top" href="html_editors.asp">HTML Editors</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Basic</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Elements</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Attributes</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Paragraph</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Headings</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Tables</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Lists</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Block & inline</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML CSS</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Comments</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Quotations</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Formatting</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Styles</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Images</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML File Path</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Responsive</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML ComputerCode</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Semantics</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Layout</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Id</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Classes</a></li>
+                    <li><a target="_top" href="html_colors.asp">HTML Iframes</a></li>
+                </ul>
+            </div>
+        </aside>
         <article>
             <h1>HTML Tutorials</h1>
             <div class="btngrp">
@@ -155,9 +155,9 @@
                 <div class="btngrp">
                     <button><a href="www.gmail.com"><i class="fa fa-chevron-left"></i>Home</a></button>
                     <button><a href="www.gmail.com">Next<i class="fa fa-chevron-right"></i></a></button>
-                </div>    
+                </div>
             </section>
-            
+
             <hr>
             <section class="buttongrp">
                 <button><a href="www.w3schools.com">Report Error</a></button>
@@ -223,5 +223,11 @@
         <div class="footerLogo"><a href="www.w3schools.com"><img src="Logo.jpg"></a></div>
     </footer>
 </body>
+<script>
+    $(window).scroll(function () {
+        var fromTop = $(window).scrollTop();
+        $("#three").css('margin', '-' + (118 - fromTop) + 'px 0px 0px 0px');
+    });
+</script>
 
 </html>
